--- a/09newsapp/package.json
+++ b/09newsapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerceweb",
+  "name": "09newsapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,25 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ecommerceweb": "file:",
-    "flowbite-react": "^0.10.2",
+    "09newsapp": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "postcss": "^8.5.1",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.10"
+    "vite": "^6.0.5"
   }
 }
